--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,12 @@
 ---
 layout: default
 ---
+<div class="back-button-container">
+    <a href="/CrocPRMsite/" class="back-button">
+        ← Voltar para o início
+    </a>
+</div>
+
 <article class="post-content">
     <header class="post-header">
         <h1>{{ page.title }}</h1>
