--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,6 +9,9 @@ layout: default
         <a href="https://drive.google.com/file/d/1HN8GmRmT1tXbHBKS-o3zOPdmdOyEfcmQ" class="main-link download">
             📥 Baixar Cliente
         </a>
+        <a href="https://discord.gg/QnbWkGjs" class="main-link discord">
+            💬 Discord do Rusbando
+        </a>
     </div>
 </div>
 
@@ -63,12 +66,20 @@ layout: default
     <h2>🗺️ Roadmap</h2>
     <p class="section-description">Planos futuros para o CrocPRM Server</p>
     
+    <div class="roadmap-item">
+        <div class="roadmap-icon">🐛</div>
+        <div class="roadmap-text">
+            <h3>Correções e Melhorias</h3>
+            <p>Correção de bugs e implementação de novas ideias (qualquer coisa, meu discord e o tópico do server estão abertos!)</p>
+        </div>
+    </div>
+
     <div class="roadmap-content">
         <div class="roadmap-item">
             <div class="roadmap-icon">🏰</div>
             <div class="roadmap-text">
                 <h3>Criação de Dungeon</h3>
-                <p>Nova dungeon para faixa de nível 115-125</p>
+                <p>Nova dungeon para faixa de nível 115-125 (envolvendo o NPC misterioso no orfanato...)</p>
             </div>
         </div>
         
@@ -76,7 +87,7 @@ layout: default
             <div class="roadmap-icon">⚖️</div>
             <div class="roadmap-text">
                 <h3>Balanceamento de Classes</h3>
-                <p>Melhorias contínuas baseadas no feedback da comunidade</p>
+                <p>Melhorias contínuas baseadas no feedback da comunidade (conto muito com vcs, pois são muitas classes)</p>
             </div>
         </div>
         
@@ -84,7 +95,7 @@ layout: default
             <div class="roadmap-icon">📦</div>
             <div class="roadmap-text">
                 <h3>Novos Shadow Set Coffers</h3>
-                <p>Implementação de coffers para níveis 125 e 130</p>
+                <p>Implementação de coffers para níveis 125 e 130 (não sei se o plano do Orn na época era esse, mas bora q bora)</p>
             </div>
         </div>
         
@@ -92,17 +103,10 @@ layout: default
             <div class="roadmap-icon">🎉</div>
             <div class="roadmap-text">
                 <h3>Evento Final</h3>
-                <p>Grande evento de encerramento com toda a comunidade</p>
+                <p>Algo pra concluir a história dos órfãos?</p>
             </div>
         </div>
         
-        <div class="roadmap-item">
-            <div class="roadmap-icon">🐛</div>
-            <div class="roadmap-text">
-                <h3>Correções e Melhorias</h3>
-                <p>Correção de bugs e implementação de novas ideias</p>
-            </div>
-        </div>
     </div>
     
     <div class="roadmap-footer">
