--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,6 +46,7 @@ layout: default
                     <h4>TL;DR</h4>
                     <ul>
                         <li><strong>Rates</strong>: Zeny 3×, XP 2×, Drops 3×.</li>
+                        <li><strong>HP/SP Máximo</strong> aumentado para <strong>55k</strong>.</li>
                         <li><strong>XP 126–150</strong> mais suavizada (≈<strong>–60%</strong> de XP total necessária).</li>
                         <li><strong>Loot revisado</strong> (Relics, Orbs, Lost Rune Coffer, Galactic Dust, etc.).</li>
                         <li><strong>Bifrostmirror</strong> agora é <strong>account-wide</strong>.</li>
